--- a/index.html
+++ b/index.html
@@ -3,12 +3,92 @@
   <head>
     <meta charset="UTF-8" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <div class="fixed-pos left-top">Left-top</div>
-    <div class="fixed-pos right-top">Right-top</div>
-    <div class="fixed-pos right-bottom">Right-bottom</div>
-    <div class="fixed-pos left-bottom">Left-bottom</div>
+    <nav>
+      <ul class="nav-list">
+        <li class="list-item">
+          <a href="#" class="link">Home</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Categories</a>
+
+          <ul class="sub-nav-list">
+            <li class="list-item sub-nav-item">
+              <a href="#" class="link">Man</a>
+
+              <ul class="sub-nav-list extended-sub-nav-list">
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Dress</a>
+                </li>
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Pants</a>
+                </li>
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Shoes</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-item sub-nav-item">
+              <a href="#" class="link">Woman</a>
+
+              <ul class="sub-nav-list extended-sub-nav-list">
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Dress</a>
+                </li>
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Pants</a>
+                </li>
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Shoes</a>
+                </li>
+              </ul>
+            </li>
+            <li class="list-item sub-nav-item">
+              <a href="#" class="link">Kids</a>
+
+              <ul class="sub-nav-list extended-sub-nav-list">
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Dress</a>
+                </li>
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Pants</a>
+                </li>
+                <li class="list-item sub-nav-item">
+                  <a href="#" class="link">Shoes</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">About</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Contacts</a>
+        </li>
+      </ul>
+    </nav>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+      mollitia nihil architecto. Quidem exercitationem error officiis nam. Dicta
+      officia sequi quibusdam laborum molestias molestiae quam non quaerat
+      reiciendis excepturi numquam nostrum quas similique, sed alias error
+      repellendus sit odit aliquam quos doloribus repudiandae autem corporis
+      quisquam! Quis, debitis totam aspernatur natus repellendus alias sapiente,
+      quod tempore ipsam assumenda pariatur hic dolorem nihil quisquam vero
+      nesciunt reiciendis quaerat numquam ratione, obcaecati reprehenderit
+      exercitationem. Dolores cupiditate alias consectetur doloremque dolor?
+      Deleniti dicta iusto, minus quasi optio itaque dolor sint, cupiditate quod
+      blanditiis tenetur ut fugit commodi, quia voluptatum fuga. Et numquam
+      repudiandae ipsa tempora, in explicabo sequi optio ducimus suscipit,
+      placeat reiciendis eos, vel possimus cum consequuntur vitae deserunt nobis
+      recusandae maiores ullam assumenda natus. Provident labore ratione natus
+      placeat laboriosam officia tenetur? Delectus ad voluptas nobis repellat
+      doloribus, voluptatibus, dicta expedita exercitationem libero pariatur
+      accusamus voluptatem facere cupiditate vero illum quaerat!
+    </p>
   </body>
 </html>
